[gd_scene load_steps=2 format=3 uid="uid://dkxo0p3u2w4wq"]

[ext_resource type="Script" uid="uid://c1sttuppimb17" path="res://main_menu/main_menu.gd" id="1_oa53l"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_oa53l")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Heaven Is Reached 
Through Polygons"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 100

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="StartButton" type="Button" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Start Game"

[node name="CreditsButton" type="Button" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "View Credits"

[node name="GameplayTips" type="Button" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Gameplay Tips"

[node name="ExitButton" type="Button" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Exit"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 450

[node name="Label" type="Label" parent="."]
offset_left = 615.0
offset_top = 495.0
offset_right = 1335.0
offset_bottom = 616.0
text = "Reccomended To Read Gameplay Tips For First Time Players"
horizontal_alignment = 1

[connection signal="pressed" from="CanvasLayer/VBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/VBoxContainer/GameplayTips" to="." method="_on_gameplay_tips_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
